--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="ad-form__field">
               <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden"
-                accept="image/png, image/jpeg">
+                accept="image/png, image/jpeg, image/jpg, image/gif">
               <label class="ad-form-header__drop-zone" for="avatar">Загрузить<br>фото...</label>
             </div>
             <p class="ad-form-header__info">Заполните все обязательные поля, назначьте цену, загрузите аватар и фото
@@ -183,10 +183,10 @@
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
               <input type="file" id="images" name="images" class="ad-form__input visually-hidden"
-                accept="image/png, image/jpeg">
+                accept="image/png, image/jpeg, image/jpg, image/gif">
               <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
             </div>
-            <div class="ad-form__photo"></div>
+            <div class="ad-form__photo"><img src="img/muffin-grey.svg" alt="Фото объекта" width="60" height="60"></div>
           </div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit">
