--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   </template>
   <script type="module" src="js/main.js"></script>
   <script src="leaflet/leaflet.js"></script>
+  <script type="module" src="js/utils/debounce.js"></script>
 </body>
 
 </html>
